[package]
name = "rustspot"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
libc = "0.2.79"
gl = "0.14.0"
png = "0.16.7"
nalgebra = "0.22.0"
imgui = "0.5.0"
sdl2 = "0.34.3"

# Keep lib and bin at the end for the CI script
[lib]
name = "rustspot"
path = "src/rustspot/lib.rs"

[[bin]]
name = "1-hello"
path = "src/demo/1-hello.rs"

[[bin]]
name = "2-rainbow"
path = "src/demo/2-rainbow.rs"

[[bin]]
name = "3-cube"
path = "src/demo/3-cube.rs"

[[bin]]
name = "4-sun"
path = "src/demo/4-sun.rs"

[[bin]]
name = "5-structure"
path = "src/demo/5-structure.rs"

[[bin]]
name = "6-viewport"
path = "src/demo/6-viewport.rs"

[[bin]]
name = "7-depth"
path = "src/demo/7-depth.rs"